test/domains/sungeun/assoc/interior.1.good
interior.chpl:4: In function 'my_interior':
interior.chpl:5: error: interior not supported on associative domains
  interior.chpl:11: called as my_interior(D: DefaultAssociativeDom(int(64),true), off: int(64)) from function 'dit'
  interior.chpl:21: called as dit(D: DefaultAssociativeDom(int(64),true), lo: int(64), hi: int(64))
